[tool.poetry]
name = "quarter-3"
version = "0.1.0"
description = "Add your description here"
authors = ["Maria Khan <mariapervaiz40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
streamlit = "*"
openpyxl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false
